recallable/tests/ui/derive_fail_borrowed_fields.rs
use recallable::Recallable;

#[derive(Recallable)]
struct BorrowedValue<'a> {
    value: &'a str,
}

fn main() {}
